--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <!-- About Me -->
     <section id="about-me" class="container">
       <div>
-        <img src="" class="profile_image"/>
+        <img src="https://png.pngtree.com/png-vector/20230809/ourmid/pngtree-cartoon-illustration-of-gaming-guy-wearing-headphones-and-sitting-with-computer-vector-png-image_6833864.png" class="profile_image"/>
       </div>
 
       <div>
