fixed top menu links

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         </div>
         <div class="topdiv">
           <a class="topmenu" href="#about-me">About Me</a>
-          <a class="topmenu"hreaf="skills">Skills</a>
-          <a class="topmenu"hreaf="projects">Projects</a>
-          <a class="topmenu"hreaf="recommendations">Recommendations</a>
+          <a class="topmenu"hreaf="#skills">Skills</a>
+          <a class="topmenu"hreaf="#projects">Projects</a>
+          <a class="topmenu"hreaf="#recommendations">Recommendations</a>
           <!-- Add the links for Skills, Projects and Recommendation here -->
 
         </div>
