--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
           </div>
           <hr>
           <div class="project-card">
-            <h3>Webtite for my bakery</h3>
+            <h3>Website for my bakery</h3>
             <ul>
               <li>I am in the process of creating a fully funtional online shop for my bakery</li>
             </ul>
