--- a/index.html
+++ b/index.html
@@ -134,9 +134,9 @@
         <div class="recommendation">
           <span>&#8220;</span>
           Jayden is a very quick learner and quickly grasps key concepts of Web development. 
-          he got a great attitude & he is an excellent team player. 
-          he has a curious mind and asks the right question. 
-          he takes initiative within a team and has potentials to lead the team.
+          he has a great attitude & he is an excellent team player. 
+          he has a curious mind and asks the right questions. 
+          he takes initiative within a team and has potential to lead the team.
           <span>&#8221;</span>
         </div>
         <div class="recommendation">
